# tt-metal

./: CMakeLists.txt  CODEOWNERS  METALIUM_GUIDE.md  kernel_testing.py
.github/actions/docker-run/: action.yml
.github/workflows/: all-post-commit-workflows.yaml  blackhole-post-commit.yaml  build-and-unit-tests-wrapper.yaml  build-and-unit-tests.yaml  cpp-post-commit-wrapper.yaml  cpp-post-commit.yaml  fast-dispatch-build-and-unit-tests.yaml  ttnn-run-sweeps.yaml
tech_reports/prog_examples/add_2_integers_in_compute/: Tutorial_Add_Two_Integers_in_a_Compute_Kernel.md  add_2_integers_in_compute.md
tests/scripts/: run_performance.sh  run_tools_tests.sh
tests/scripts/single_card/: run_single_card_demo_tests.sh
tests/tt_eager/integration_tests/: test_bert.cpp
tests/tt_eager/ops/: test_average_pool.cpp  test_bcast_op.cpp  test_bmm_op.cpp  test_eltwise_binary_op.cpp  test_eltwise_unary_op.cpp  test_fold_op.cpp  test_layernorm_op.cpp  test_pad_op.cpp  test_sfpu.cpp  test_sliding_window_ops.cpp  test_softmax_op.cpp  test_tilize_op.cpp  test_tilize_op_channels_last.cpp  test_tilize_zero_padding.cpp  test_tilize_zero_padding_channels_last.cpp  test_transpose_op.cpp  test_transpose_wh_single_core.cpp
tests/tt_eager/tensors/: test_async_tensor_apis.cpp  test_copy_and_move.cpp  test_host_device_loopback.cpp  test_ranks.cpp  test_raw_host_memory_pointer.cpp
tests/tt_metal/distributed/: mesh_buffer_spec.md  test_distributed.cpp
tests/tt_metal/tt_metal/: CMakeLists.txt  test_add_two_ints.cpp  test_bcast.cpp  test_bmm.cpp  test_clean_init.cpp  test_compile_args.cpp  test_compile_program.cpp  test_compile_sets_kernel_binaries.cpp  test_core_range_set.cpp  test_datacopy.cpp  test_datacopy_bfp8b.cpp  (+34 more)
tests/tt_metal/tt_metal/dispatch/dispatch_settings/: CMakeLists.txt  test_cq_device_settings.cpp
tt_fabric/: CMakeLists.txt  control_plane.cpp  control_plane.hpp  mesh_graph.cpp  mesh_graph.hpp  routing_table_generator.hpp
tt_fabric/hw/inc/: eth_chan_noc_mapping.h  tt_fabric.h
tt_metal/: host_api.hpp  tt_metal.cpp
tt_metal/common/: core_coord.cpp  logger.hpp
tt_metal/detail/: tt_metal.hpp
tt_metal/distributed/: CMakeLists.txt  mesh_config.hpp  mesh_device.cpp  mesh_device.hpp  mesh_device_view.cpp  mesh_device_view.hpp  mesh_handle.hpp  system_mesh.cpp
tt_metal/experimental/: hal.cpp
tt_metal/graph/: graph_tracking.cpp
tt_metal/impl/: CMakeLists.txt
tt_metal/jit_build/: build.cpp
tt_metal/llrt/: hal.cpp  hal.hpp  llrt.cpp  rtoptions.cpp  tt_cluster.cpp  tt_cluster.hpp
tt_metal/python_env/: requirements-dev.txt
tt_metal/tt_stl/: reflection.hpp
ttnn/: CMakeLists.txt
ttnn/ttnn/: device.py
(+586 files in other folders)
